Adding IntelliJ IDEA instructions to README.md and changing order of settings in test props template